--- a/Class_Materials/Python_Basics/Python_String_Operations.ipynb
+++ b/Class_Materials/Python_Basics/Python_String_Operations.ipynb
@@ -518,18 +518,14 @@
    "outputs": [],
    "source": [
     "students = ['Anaswara Vijayan',\n",
-    " 'Azad Kader',\n",
-    " 'Babitha Prasun',\n",
     " 'Bruna Santos',\n",
     " 'Bryan Dunleavy',\n",
-    " 'Elisa Cerdá Doñate',\n",
     " 'Feras Rafeh',\n",
     " 'Geneva Uy',\n",
     " 'Iranel González',\n",
     " 'Ivanna Pivtorak',\n",
     " 'Jan Hildebrand',\n",
     " 'Kaan Dural',\n",
-    " 'Simran Agarwal',\n",
     " 'Tahora Husaini',\n",
     " 'Tomas Renaudo',\n",
     " 'Valentina Delgado']"
@@ -599,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "id": "0ZJ7KdE0HyHG"
    },
@@ -652,6 +648,31 @@
     "        ## if color is found in the sentence\n",
     "        if(sentence.lower().find(color) !=-1):\n",
     "            print (color + \" is detected in the list : \"+ sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El fragmento de código que has compartido es un bucle anidado que busca la presencia de ciertos colores en cada una de las oraciones de una lista. A continuación, te explico cómo funciona paso a paso:\n",
+    "\n",
+    "Supongamos que tienes una lista llamada sentences que contiene varias oraciones, y otra lista llamada colors que contiene los colores que deseas buscar en las oraciones.\n",
+    "\n",
+    "El bucle exterior for sentence in sentences: recorre cada elemento de la lista sentences. En cada iteración, la variable sentence representa una oración individual.\n",
+    "\n",
+    "El bucle interior for color in colors: recorre cada elemento de la lista colors. En cada iteración, la variable color representa un color individual.\n",
+    "\n",
+    "Dentro del bucle anidado, se verifica si el color está presente en la oración utilizando la expresión condicional if(sentence.lower().find(color) != -1):.\n",
+    "\n",
+    "sentence.lower() se utiliza para convertir la oración a minúsculas, lo cual permite una comparación insensible a mayúsculas y minúsculas. Esto evita que se pasen por alto las coincidencias debido a diferencias de capitalización.\n",
+    "\n",
+    "sentence.lower().find(color) busca la posición del color en la oración convertida a minúsculas utilizando el método find(). Si find() encuentra el color en la oración, devuelve la posición en la que se encuentra. Si no lo encuentra, devuelve -1.\n",
+    "\n",
+    "La expresión condicional if(sentence.lower().find(color) != -1): verifica si find() no devuelve -1, lo que indica que el color fue encontrado en la oración. Si es así, se ejecuta el bloque de código dentro del if.\n",
+    "\n",
+    "En el bloque de código dentro del if, se imprime un mensaje que indica que el color ha sido detectado en la lista y se muestra la oración correspondiente. La cadena \"is detected in the list : \" se concatena con el color y la oración utilizando el operador +.\n",
+    "\n",
+    "En resumen, este fragmento de código busca cada color en cada oración de las listas proporcionadas y muestra un mensaje cuando un color es encontrado en una oración."
    ]
   },
   {
@@ -775,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
