--- a/Class_Materials/SQL_MYSQL/Connecting_Python_To_Sql.ipynb
+++ b/Class_Materials/SQL_MYSQL/Connecting_Python_To_Sql.ipynb
@@ -17,11 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pymysql\n",
+      "  Downloading PyMySQL-1.0.3-py3-none-any.whl (43 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.7/43.7 kB\u001b[0m \u001b[31m589.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pymysql\n",
+      "Successfully installed pymysql-1.0.3\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip3 install pymsql\n",
+    "!pip3 install pymysql\n",
     "\n",
     "#we need to install into our Conda DA_Env :\n",
     "\n",
@@ -34,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import getpass\n",
-    "import sqlalchemy as sa"
+    "import sqlalchemy as sa\n"
    ]
   },
   {
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bank', 'information_schema', 'lab_db', 'lab_db_python_sql', 'lab_db_python_sql2', 'lab_db_test_commands', 'lab_group_by_db', 'mysql', 'Olist', 'performance_schema', 'publications', 'sakila', 'skila_analytics', 'sys']\n"
+      "['bank', 'information_schema', 'lab_db_python_sql', 'mysql', 'performance_schema', 'sakila', 'sys']\n"
      ]
     }
    ],
@@ -1022,16 +1034,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fbf84e83ca0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x132e06fe0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,16 +1054,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fbf84e9dd00>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x132e07550>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1162,7 @@
        "2  3  6"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,9 +1174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_table.to_sql(name=\"clean_df_test_2\", con=db_connection, schema=\"lab_db_python_sql\")"
    ]
@@ -1417,7 +1440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
