--- a/Class_Materials/Pandas/Pandas_Data_Frame_General-3.ipynb
+++ b/Class_Materials/Pandas/Pandas_Data_Frame_General-3.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "852fcd8f",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "{'AR': [2], 'ES': [0, 1], 'FR': [3], 'MA': [5], 'UK': [4], 'XX': [6]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e3cbeeec",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "6      XX    2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,17 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "67fd0beb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000227DA4E5E50>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x10b521f90>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "127baca8",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "{'Anna': [3, 4], 'Dog': [6], 'Javi': [1, 5], 'Maria': [2], 'Pol': [0]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "90399e2f",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "6    Dog    2      XX"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "6d63e96e",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "XX      Dog     2.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0aed3db1",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "{('AR', 'Maria'): [2], ('ES', 'Javi'): [1], ('ES', 'Pol'): [0], ('FR', 'Anna'): [3], ('MA', 'Javi'): [5], ('UK', 'Anna'): [4], ('XX', 'Dog'): [6]}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "d4787b0d",
    "metadata": {},
    "outputs": [],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "d5d17643",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "Pol    22.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "fada0624",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "Pol    37.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "28bfbe59",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "Pol         Pol   22      ES"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "c75f14f8",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
        "'Ilkay'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "4ddde247",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
        "4    Pol      ES"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "336336c4",
    "metadata": {},
    "outputs": [
@@ -868,8 +868,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Aleks\\anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\generic.py:303: FutureWarning: Dropping invalid columns in SeriesGroupBy.agg is deprecated. In a future version, a TypeError will be raised. Before calling .agg, select only columns which should be valid for the aggregating function.\n",
-      "  results[key] = self.aggregate(func)\n"
+      "/var/folders/ry/gjr8200n3dlbt309r1yzb4480000gn/T/ipykernel_57043/43928274.py:1: FutureWarning: ['country'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
+      "  people_df.groupby('name').agg(['max',groups_avg])\n"
      ]
     },
     {
@@ -951,7 +951,7 @@
        "Pol    22       37.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "d0d6bf91",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1050,7 @@
        "6    Dog    2      XX"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "32b54eac",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1167,7 @@
        "XX          1   2.0   2    Dog"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "82bb410b",
    "metadata": {
     "scrolled": false
@@ -1212,7 +1212,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "d6338e96",
    "metadata": {},
    "outputs": [
@@ -1392,7 +1392,7 @@
        "14          Vietnam         East Asia & Pacific    95540395               75"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "fc9b531d",
    "metadata": {},
    "outputs": [
@@ -1422,7 +1422,7 @@
        "Name: Life Expectancy, dtype: bool"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "e2db7772",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1537,7 @@
        "2   United States              North America   326687501               79"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
